U6006 Game Rewards Info Popup - fixed modal width and money alignment

--- a/src/main/resources/static/css/slot.css
+++ b/src/main/resources/static/css/slot.css
@@ -31,6 +31,7 @@ body {
 .container .money-container {
     position: relative;
     margin-bottom: 0.5rem;
+    margin-right: 15rem;
     font-family: "Roboto", sans-serif;
     color: #edfaf9; /* $textCol */
 }
@@ -230,6 +231,8 @@ body {
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
+    align-items: center; /* Add this to center vertically */
+    justify-content: center; /* Add this to center horizontally */
 }
 
 .modal-content {
@@ -237,7 +240,7 @@ body {
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 30%;
 }
 
 .modal-content .rewards-centre {
